# SBZ2P-Newsletter-Framework

production_rust/: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  sqlx-data.json  stylesheet.css
production_rust/configuration/: base.yaml  local.yaml  production.yaml
production_rust/configurations/: local.yaml
production_rust/src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
production_rust/src/authentication/: middleware.rs  mod.rs
production_rust/src/domain/: subscriber_email.rs
production_rust/src/idempotency/: key.rs  mod.rs  persistence.rs
production_rust/src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
production_rust/src/routes/admin/: dashboard.rs  mod.rs
production_rust/src/routes/admin/newsletter/: get.rs  post.rs
production_rust/src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
production_rust/src/routes/admin/password/: get.rs  post.rs
production_rust/src/routes/admin/settings/: get.rs  mod.rs  post.rs
production_rust/src/routes/blog/: get.rs
production_rust/src/routes/home/: blog.html  get.rs  home.html  mod.rs  stylesheet.css
production_rust/src/routes/login/: get.rs  login.html  post.rs
production_rust/src/routes/subscribe/: get.rs  subscriptions.rs
production_rust/tests/: health_check.rs
production_rust/tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
scripts/: init_db.sh  init_redis.sh
(+2 files in other folders)
