[package]
name = "production_rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "production_rust"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.16"
rand = { version = "0.8", features = ["std_rng"] }
config = "0.13"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
linkify = "0.9"
serde_json = "1"
wiremock = "0.5"
once_cell = "1"
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[profile.release]
strip = true